--- a/src/stylesheets/Climb.css
+++ b/src/stylesheets/Climb.css
@@ -1,4 +1,3 @@
-/* Climb Section Styling */
 .climb-section {
   padding: 100px 20px;
   background-color: #2b2a2a;
@@ -30,27 +29,24 @@
   margin-bottom: 30px; /* Space between experience cards */
 }
 
-/* Vertical line */
 .vertical-line {
   position: absolute;
-  left: -20px; /* Adjust left position as needed */
+  left: -20px;
   top: 0;
   bottom: 0;
-  width: 2px; /* Width of vertical line */
-  background-color: #fafafa; /* Color of vertical line */
+  width: 2px; 
+  background-color: #fafafa; 
 }
 
-/* Horizontal line */
 .horizontal-line {
   position: absolute;
-  left: -15px; /* Align with the vertical line */
-  width: 20px; /* Length of the horizontal line */
-  height: 2px; /* Height of the horizontal line */
-  background-color: #ffffff; /* Color of horizontal line */
-  top: 20px; /* Position it at the top of the experience card */
+  left: -15px; 
+  width: 20px; 
+  height: 2px; 
+  background-color: #ffffff; 
+  top: 20px; 
 }
 
-/* Experience Title and Details */
 .experience-title {
   color: black;
   font-size: 1.8rem;
