--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -7,7 +7,7 @@
 }
 
 #name {
-  font-size: 100px;
+  font-size: 600%;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin: 150px 100px 30px 100px; 
   position: relative;
