--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -1,7 +1,7 @@
 .home-content {
   color: white;
   text-align: right;
-  min-height: 800px;
+  min-height: 750px;
   background-image: url('../logos/section1.png');
   background-size: cover; 
   background-position: center;  
@@ -12,7 +12,8 @@
 #name {
   font-size: 600%;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  margin: 100px 50px 30px 50px;
+  margin: 150px 50px 30px 50px;
+  padding: 100px 0px 0px 0px;
   position: relative;
   overflow: hidden;     
   border-right: 3px solid black;
