--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -12,14 +12,16 @@
 #name {
   font-size: 600%;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  margin: 50px 50px 30px 50px;
+  margin: 100px 50px 30px 50px;
   padding: 200px 0px 0px 0px;
   position: relative;
   overflow: hidden;     
   border-right: 3px solid black;
   animation: typing 3s steps(30, end), blink-caret 0.75s step-end infinite;
   max-width: calc(100% - 200px); 
-  white-space: nowrap; /* Keep the typing effect */
+  white-space: nowrap;
+  line-height: 1;
+  display: inline-block; 
 }
 
 @keyframes typing {
