--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -17,10 +17,9 @@
   position: relative;
   overflow: hidden;     
   border-right: 3px solid black;
-  animation: typing 3s steps(30, end), blink-caret 0.75s step-end infinite;
+  animation: typing 3s steps(30, end);
   max-width: calc(100% - 200px); 
   white-space: nowrap;
-  display: inline-block; 
 }
 
 @keyframes typing {
@@ -29,15 +28,6 @@
   }
   to {
     width: calc(100% - 200px); 
-  }
-}
-
-@keyframes blink-caret {
-  from, to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: rgb(255, 255, 255);
   }
 }
 @keyframes slideInFromRight {
